Source/WebCore/dom/ComposedTreeIterator.h
@@ -54,6 +54,8 @@ public:
 
     unsigned depth() const;
 
+    void dropAssertions();
+
 private:
     void initializeContextStack(ContainerNode& root, Node& current);
     void traverseNextInShadowTree();
@@ -81,6 +83,7 @@ private:
     const Context& context() const { return m_contextStack.last(); }
     Node& current() { return *context().iterator; }
 
+    bool m_didDropAssertions { false };
     Vector<Context, 4> m_contextStack;
 };
 
